establishing workflow in notebooks

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -22,6 +22,17 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# 1. Data Cleaning Notebook\n",
+    "\n",
+    "This notebook contains basic data cleaning steps that are not included in the NLP preprocessing procedure. The purpose of this is to fix up the provided `twitter_data.csv` and adjust it for our use.\n",
+    "\n",
+    "The cleaned dataframe will be pickled for future use across all notebooks."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
