fixing preprocessing steps

--- a/nlp_preprocessing.ipynb
+++ b/nlp_preprocessing.ipynb
@@ -85,8 +85,8 @@
   },
   {
    "source": [
-    "## Step 4 ?\n",
-    "Tokenize & Vectorize"
+    "## Step 4: Vectorize\n",
+    "Include `stop_words='english'` to automatically remove stop words!"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -99,9 +99,15 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
-    "## Step 5 ?\n",
-    "Removing stop words?"
+    "## Step 5: Pickle final matrix "
    ],
    "cell_type": "markdown",
    "metadata": {}
