fixing desc on data cleaning notebook

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -25,9 +25,9 @@
    "source": [
     "# 1. Data Cleaning Notebook\n",
     "\n",
-    "This notebook contains basic data cleaning steps that are not included in the NLP preprocessing procedure. The purpose of this is to fix up the provided `twitter_data.csv` and adjust it for our use.\n",
+    "This notebook contains **basic data cleaning steps that are not included in the NLP preprocessing procedure**. We will also be doing **EDA** on **non-corpus data** columns here.\n",
     "\n",
-    "The cleaned dataframe will be pickled for future use across all notebooks."
+    "The purpose of this is to fix up the provided `twitter_data.csv` and adjust it for our classification use. **The cleaned dataframe will be pickled for future use across all notebooks.**"
    ],
    "cell_type": "markdown",
    "metadata": {}
