fixing readme and starting preprocesing

--- a/preprocessing/nlp_preprocessing.ipynb
+++ b/preprocessing/nlp_preprocessing.ipynb
@@ -23,28 +23,244 @@
  "cells": [
   {
    "source": [
-    "# 2. NLP Preprocessing Notebook\n",
+    "# NLP Preprocessing Notebook\n",
     "\n",
-    "The purpose of this notebook is to conduct the preprocessing steps that are necessary for text data in NLP. This includes lowercasing data, removing stop words, vectorizing, etc."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "### Step 1: Load the pickled dataframe from data_cleaning.ipynb\n"
+    "The purpose of this notebook is to conduct the preprocessing steps that are necessary for text data in NLP. This includes tokenizing, removing stop words, vectorizing, etc."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# do df.head() to check that it worked\n",
-    "# this is our corpus! (NLP term)"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "import nltk\n",
+    "from sklearn.feature_extraction import text \n",
+    "from nltk.stem import WordNetLemmatizer \n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from nltk.probability import FreqDist\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import PorterStemmer\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import train_test_split\n"
+   ]
+  },
+  {
+   "source": [
+    "### 1. Load the clean dataframe from `data_cleaning.ipynb`\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is our corpus\n",
+    "clean_df = pd.read_pickle('../pickle/clean_df.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   total_votes  hate_speech_votes  other_votes  label  \\\n",
+       "0            3                  0            3      0   \n",
+       "1            3                  0            3      0   \n",
+       "2            3                  0            3      0   \n",
+       "3            3                  0            3      0   \n",
+       "4            6                  0            6      0   \n",
+       "\n",
+       "                                               tweet  \\\n",
+       "0  !!! RT @mayasolovely: As a woman you shouldn't...   \n",
+       "1  !!!!! RT @mleew17: boy dats cold...tyga dwn ba...   \n",
+       "2  !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...   \n",
+       "3  !!!!!!!!! RT @C_G_Anderson: @viva_based she lo...   \n",
+       "4  !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...   \n",
+       "\n",
+       "                                       round_1_tweet  \n",
+       "0     as a woman you shouldnt complain about clea...  \n",
+       "1     boy dats coldtyga dwn bad for cuffin dat ho...  \n",
+       "2     dawg   you ever fuck a bitch and she sta to...  \n",
+       "3                             she look like a tranny  \n",
+       "4     the shit you hear about me might be true or...  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>total_votes</th>\n      <th>hate_speech_votes</th>\n      <th>other_votes</th>\n      <th>label</th>\n      <th>tweet</th>\n      <th>round_1_tweet</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!! RT @mayasolovely: As a woman you shouldn't...</td>\n      <td>as a woman you shouldnt complain about clea...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!!!! RT @mleew17: boy dats cold...tyga dwn ba...</td>\n      <td>boy dats coldtyga dwn bad for cuffin dat ho...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...</td>\n      <td>dawg   you ever fuck a bitch and she sta to...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!!!!!!!! RT @C_G_Anderson: @viva_based she lo...</td>\n      <td>she look like a tranny</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>6</td>\n      <td>0</td>\n      <td>6</td>\n      <td>0</td>\n      <td>!!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...</td>\n      <td>the shit you hear about me might be true or...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "clean_df.head()"
+   ]
+  },
+  {
+   "source": [
+    "### creating `tweet_df` with only cleaned tweets column"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tweet_df = pd.DataFrame(tweet_data)\n",
+    "\n",
+    "tweet_df = clean_df[['round_1_tweet', 'label']].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                                       round_1_tweet  label\n",
+       "0     as a woman you shouldnt complain about clea...      0\n",
+       "1     boy dats coldtyga dwn bad for cuffin dat ho...      0\n",
+       "2     dawg   you ever fuck a bitch and she sta to...      0\n",
+       "3                             she look like a tranny      0\n",
+       "4     the shit you hear about me might be true or...      0"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>round_1_tweet</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>as a woman you shouldnt complain about clea...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>boy dats coldtyga dwn bad for cuffin dat ho...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>dawg   you ever fuck a bitch and she sta to...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>she look like a tranny</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>the shit you hear about me might be true or...</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "tweet_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = tweet_df['round_1_tweet']\n",
+    "target = tweet_df['label']"
+   ]
+  },
+  {
+   "source": [
+    "## Remove Stop Words & Tokenize"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_tweet(text):\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "    stopwords_removed = [token.lower() for token in tokens if token.lower() not in stop_words]\n",
+    "    return stopwords_removed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# applying the above function to our data/features \n",
+    "processed_data = list(map(process_tweet, data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "22021"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 45
+    }
+   ],
+   "source": [
+    "total_vocab = set()\n",
+    "for comment in processed_data:\n",
+    "    total_vocab.update(comment)\n",
+    "len(total_vocab)"
+   ]
+  },
+  {
+   "source": [
+    "## Lemmatization"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a list with all lemmatized outputs\n",
+    "lemmatizer = WordNetLemmatizer() \n",
+    "lemmatized_output = []\n",
+    "\n",
+    "for listy in processed_data:\n",
+    "    lemmed = ' '.join([lemmatizer.lemmatize(w) for w in listy])\n",
+    "    lemmatized_output.append(lemmed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_lem = lemmatized_output\n",
+    "# [' '.join(d) for d in processed_data]\n",
+    "\n",
+    "y_lem = target\n",
+    "# X[3]"
    ]
   },
   {
@@ -56,61 +272,46 @@
   },
   {
    "source": [
-    "### Step 2: Create functions to do 2 rounds of cleaning on the data"
+    "## Step 4: Vectorize & TTS"
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "source": [
-    "### Step 3: Final clean Document-Term Matrix\n",
-    "This matrix will have all the data from the corpus cleaned and ready for vectorization"
+    "X_train_lem, X_test_lem, y_train_lem, y_test_lem = train_test_split(X_lem, y_lem, test_size=0.20, random_state=15)\n",
+    "\n",
+    "# using tf_idf vectorizor\n",
+    "tfidf = TfidfVectorizer(stop_words= stop_words, ngram_range=(1,2))"
    ],
-   "cell_type": "markdown",
-   "metadata": {}
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 49,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<19826x109462 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 274013 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 50
+    }
+   ],
    "source": [
-    "## Step 4: Vectorize\n",
-    "Include `stop_words='english'` to automatically remove stop words!"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "source": [
-    "## Step 5: Pickle final matrix "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+    "tfidf_data_train_lem = tfidf.fit_transform(X_train_lem)\n",
+    "tfidf_data_test_lem = tfidf.transform(X_test_lem)\n",
+    "\n",
+    "tfidf_data_train_lem"
+   ]
   },
   {
    "cell_type": "code",
