cleaning up imports according to nb need

--- a/preprocessing/data_cleaning.ipynb
+++ b/preprocessing/data_cleaning.ipynb
@@ -48,16 +48,9 @@
     "%matplotlib inline\n",
     "sns.set()\n",
     "plt.style.use('bmh')\n",
-    "import sklearn\n",
-    "from sklearn.preprocessing import StandardScaler, binarize\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.feature_selection import RFECV, SelectKBest, f_regression\n",
-    "import sklearn.metrics as metrics\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, plot_confusion_matrix, roc_curve, auc, classification_report\n",
-    "from sklearn.model_selection import train_test_split, cross_validate, cross_val_score, GridSearchCV\n",
+    "# packages for data cleaning function\n",
+    "import re\n",
+    "import string\n",
     "import pickle"
    ]
   },
@@ -386,9 +379,6 @@
    "outputs": [],
    "source": [
     "# function to clean all data\n",
-    "import re\n",
-    "import string\n",
-    "\n",
     "def clean_text_round1(text):\n",
     "    '''Make text lowercase, remove text in square brackets, remove punctuation and remove words containing numbers.'''\n",
     "    # make text lowecase\n",
