--- a/preprocessing/nlp_preprocessing.ipynb
+++ b/preprocessing/nlp_preprocessing.ipynb
@@ -40,27 +40,15 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
-    "import seaborn as sns\n",
+    "import seaborn as sns; sns.set()\n",
     "%matplotlib inline\n",
+    "# packages for NLP preprocessing\n",
     "import nltk\n",
     "from sklearn.feature_extraction import text \n",
     "from nltk.stem import WordNetLemmatizer \n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
     "from nltk.probability import FreqDist\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import PorterStemmer\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn import metrics\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "import sklearn.metrics as metrics\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, plot_confusion_matrix, roc_curve, auc, classification_report\n",
     "import pickle"
    ]
   },
