finalizing baselines & correct metrics

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -130,6 +130,14 @@
   },
   {
    "source": [
+    "### Training model on full dataset\n",
+    "using .fit_transform(X_lem)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "## Conclusions"
    ],
    "cell_type": "markdown",
