--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.6.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -86,6 +86,34 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "source": [
+    "### Class Imbalance"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "![imbalance](./visualizations/cleaned_class_imbalance.png)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
     "## Feature Engineering\n",
     "Data cleaning function, tokenization, lemming"
@@ -115,11 +143,46 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
     "## Modeling"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "### Baseline"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
