trying to solve class imbalance

--- a/models/baseline.ipynb
+++ b/models/baseline.ipynb
@@ -24,7 +24,9 @@
  "cells": [
   {
    "source": [
-    "# Baseline Model"
+    "# Baseline Model\n",
+    "\n",
+    "This notebook contains three baseline models: Random Forest, Logistic Regression, and Naive Bayes. Out of them, Logistic Regression had the highest F1 Score."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -111,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sparse matric format with 265K stored elements\n",
+    "# sparse matrix format with 265K stored elements\n",
     "tfidf_data_train = tfidf.fit_transform(X_train)\n",
     "tfidf_data_test = tfidf.transform(X_test)"
    ]
