ready for grid search

--- a/models/logisitic_regression.ipynb
+++ b/models/logisitic_regression.ipynb
@@ -529,7 +529,7 @@
   },
   {
    "source": [
-    "### Looking at metrics for all baselines"
+    "### Metrics for all Baselines"
    ],
    "cell_type": "markdown",
    "metadata": {}
