--- a/models/Doc2Vec.ipynb
+++ b/models/Doc2Vec.ipynb
@@ -24,7 +24,9 @@
  "cells": [
   {
    "source": [
-    "## Doc2Vec Modeling"
+    "# Doc2Vec Modeling\n",
+    "\n",
+    "The code in the notebook was referenced from [this](https://towardsdatascience.com/multi-class-text-classification-with-doc2vec-logistic-regression-9da9947b43f4) Medium post."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -54,6 +56,7 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "# model\n",
     "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
+    "from sklearn.svm import LinearSVC\n",
     "# metrics\n",
     "from sklearn import metrics, model_selection\n",
     "import sklearn.metrics as metrics\n",
@@ -64,7 +67,7 @@
   },
   {
    "source": [
-    "## Importing X and y from `nlp_preprocessing.ipynb`"
+    "## Importing `clean_df`"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -75,23 +78,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_lem = pickle.load(open('../pickle/X_lem.pkl', 'rb'))\n",
-    "y_lem = pd.read_pickle('../pickle/y_lem.pkl')"
+    "clean_df = pd.read_pickle('../pickle/clean_df.pkl')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   total_votes  hate_speech_votes  other_votes  label  \\\n",
+       "0            3                  0            3      0   \n",
+       "1            3                  0            3      0   \n",
+       "\n",
+       "                                               tweet  \\\n",
+       "0  !!! RT @mayasolovely: As a woman you shouldn't...   \n",
+       "1  !!!!! RT @mleew17: boy dats cold...tyga dwn ba...   \n",
+       "\n",
+       "                                       round_1_tweet  \n",
+       "0     as a woman you shouldnt complain about clea...  \n",
+       "1     boy dats coldtyga dwn bad for cuffin dat ho...  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>total_votes</th>\n      <th>hate_speech_votes</th>\n      <th>other_votes</th>\n      <th>label</th>\n      <th>tweet</th>\n      <th>round_1_tweet</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!! RT @mayasolovely: As a woman you shouldn't...</td>\n      <td>as a woman you shouldnt complain about clea...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!!!! RT @mleew17: boy dats cold...tyga dwn ba...</td>\n      <td>boy dats coldtyga dwn bad for cuffin dat ho...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
-    "# setting up stop words\n",
-    "stop_words = set(stopwords.words('english'))"
+    "clean_df.head(2)"
    ]
   },
   {
    "source": [
-    "## Train-Test Split & Vectorize"
+    "## Train-Test Split"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -102,13 +125,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X_lem, y_lem, test_size=0.20, random_state=15)"
+    "train, test = train_test_split(clean_df, test_size=0.3, random_state=42)"
    ]
   },
   {
    "source": [
-    "## Preparing the Data\n",
-    "Scale data with `StandardScalar`"
+    "## Preparing the Data"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -119,15 +141,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tagged_train = [TaggedDocument(words=word_tokenize(_d.lower()), tags=[str(i)]) for i, _d in enumerate(X_train)]"
+    "def tokenize_text(text):\n",
+    "    tokens = []\n",
+    "    for sent in nltk.sent_tokenize(text):\n",
+    "        for word in nltk.word_tokenize(sent):\n",
+    "            if len(word) < 2:\n",
+    "                continue\n",
+    "            tokens.append(word.lower())\n",
+    "    return tokens"
    ]
-  },
-  {
-   "source": [
-    "## Baseline Model"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -135,11 +157,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train a doc2vec model, using only training data\n",
-    "model = Doc2Vec(vector_size=100, \n",
-    "                alpha=0.025, \n",
-    "                min_count=5,\n",
-    "                dm=1, epochs=100)"
+    "tagged_train = train.apply(\n",
+    "    lambda r: TaggedDocument(words=tokenize_text(r['round_1_tweet']), tags=[r.label]), axis=1)\n",
+    "tagged_test = test.apply(\n",
+    "    lambda r: TaggedDocument(words=tokenize_text(r['round_1_tweet']), tags=[r.label]), axis=1)"
    ]
   },
   {
@@ -148,28 +169,216 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "CPU times: user 1min 43s, sys: 17.1 s, total: 2min\nWall time: 1min 33s\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "TaggedDocument(words=['this', 'bitch', 'instating', 'and', 'driving', 'for', 'me'], tags=[0])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
     }
    ],
    "source": [
-    "%%time\n",
+    "tagged_train.values[30]"
+   ]
+  },
+  {
+   "source": [
+    "## Training DBOW Model\n",
     "\n",
-    "model.build_vocab(tagged_train)\n",
-    "model.train(tagged_train, \n",
-    "            total_examples=model.corpus_count, \n",
-    "            epochs=model.epochs)"
+    "This is the Doc2Vec model analogous to Skip-gram model in Word2Vec. Here we can see that training a Doc2Vec model is much more straight forward in Gensim."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train a doc2vec model, using only training data\n",
+    "dbow_model = Doc2Vec(vector_size=100, \n",
+    "                alpha=0.025, \n",
+    "                min_count=5,\n",
+    "                dm=1, epochs=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "100%|██████████| 17348/17348 [00:00<00:00, 2495037.75it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "tqdm.pandas(desc=\"progress-bar\")\n",
+    "\n",
+    "# building vocabulary \n",
+    "dbow_model.build_vocab([x for x in tqdm(tagged_train.values)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "100%|██████████| 17348/17348 [00:00<00:00, 2284115.58it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2945981.04it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2789556.27it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2847301.34it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2726832.03it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3067312.44it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2699316.88it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3018075.65it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2988082.04it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2970515.85it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3024850.79it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2270643.96it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2879413.76it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2921144.40it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3254877.47it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2919972.14it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3149222.50it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2986487.68it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3050978.48it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3036083.86it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2869874.02it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3048805.24it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3052514.40it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2861297.12it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2821356.56it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3023468.20it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3217883.68it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3099058.13it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2917630.45it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3033931.78it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import utils\n",
+    "\n",
+    "for epoch in range(30):\n",
+    "    dbow_model.train(utils.shuffle([x for x in tqdm(tagged_train.values)]), total_examples=len(tagged_train.values), epochs=1)\n",
+    "    dbow_model.alpha -= 0.002\n",
+    "    dbow_model.min_alpha = dbow_model.alpha"
+   ]
+  },
+  {
+   "source": [
+    "### Building the final vector feature for the classifier"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def vec_for_learning(model, tagged_docs):\n",
+    "    sents = tagged_docs.values\n",
+    "    targets, regressors = zip(*[(doc.tags[0], model.infer_vector(doc.words, steps=20)) for doc in sents])\n",
+    "    return targets, regressors"
+   ]
+  },
+  {
+   "source": [
+    "## Logisitic Regression\n",
+    "\n",
+    "We're using a Logisitic Regression model because it was the best performing baseline."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train, X_train = vec_for_learning(dbow_model, tagged_train)\n",
+    "y_test, X_test = vec_for_learning(dbow_model, tagged_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logreg = LogisticRegression(n_jobs=1, C=1e5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=100000.0, n_jobs=1)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "logreg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = logreg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Testing precision 0.42735042735042733\nTesting recall 0.117096018735363\nTesting F1 score: 0.9239134499250821\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Testing precision %s' % precision_score(y_test, y_pred))\n",
+    "print('Testing recall %s' % recall_score(y_test, y_pred))\n",
+    "print('Testing F1 score: {}'.format(f1_score(y_test, y_pred, average='weighted')))"
+   ]
+  },
+  {
+   "source": [
+    "Looks like using Doc2Vec on a Logistic Regression model really bumped up the F1 score! We can try using this method on other models next."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
