adding weighted scores to baselines

--- a/models/Doc2Vec.ipynb
+++ b/models/Doc2Vec.ipynb
@@ -214,7 +214,7 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 17348/17348 [00:00<00:00, 2495037.75it/s]\n"
+      "100%|██████████| 17348/17348 [00:00<00:00, 2728468.04it/s]\n"
      ]
     }
    ],
@@ -235,42 +235,41 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 17348/17348 [00:00<00:00, 2284115.58it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2945981.04it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2789556.27it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2847301.34it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2726832.03it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3067312.44it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2699316.88it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3018075.65it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2988082.04it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2970515.85it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3024850.79it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2270643.96it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2879413.76it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2921144.40it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3254877.47it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2919972.14it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3149222.50it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2986487.68it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3050978.48it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3036083.86it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2869874.02it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3048805.24it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3052514.40it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2861297.12it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2821356.56it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3023468.20it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3217883.68it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3099058.13it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 2917630.45it/s]\n",
-      "100%|██████████| 17348/17348 [00:00<00:00, 3033931.78it/s]\n"
+      "100%|██████████| 17348/17348 [00:00<00:00, 2211433.18it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3177414.23it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2680028.94it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2853330.68it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3398700.82it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2881123.97it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2931382.88it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2777841.71it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3228162.63it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3088534.56it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3060603.42it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3268327.98it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2897299.74it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3029636.75it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2960002.68it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3214329.89it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2784538.89it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3237786.94it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2973064.71it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2923961.66it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3231173.04it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2682202.37it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3169663.09it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2911326.60it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2900417.98it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3198223.63it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 3259689.36it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2752204.62it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2678844.92it/s]\n",
+      "100%|██████████| 17348/17348 [00:00<00:00, 2386291.02it/s]\n"
      ]
     }
    ],
    "source": [
     "from sklearn import utils\n",
-    "\n",
     "for epoch in range(30):\n",
     "    dbow_model.train(utils.shuffle([x for x in tqdm(tagged_train.values)]), total_examples=len(tagged_train.values), epochs=1)\n",
     "    dbow_model.alpha -= 0.002\n",
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +337,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 14
     }
    ],
    "source": [
@@ -347,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,21 +355,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Testing precision 0.42735042735042733\nTesting recall 0.117096018735363\nTesting F1 score: 0.9239134499250821\n"
+      "Testing precision 0.4491525423728814\nTesting recall 0.12412177985948478\nTesting F1 score: 0.9248533027145003\n"
      ]
     }
    ],
    "source": [
     "print('Testing precision %s' % precision_score(y_test, y_pred))\n",
     "print('Testing recall %s' % recall_score(y_test, y_pred))\n",
-    "print('Testing F1 score: {}'.format(f1_score(y_test, y_pred, average='weighted')))"
+    "print('Testing F1 score: {}'.format(f1_score(y_test, y_pred, average='weighted')))\n",
+    "\n",
+    "# not having a weighted F1 brings the score down to .19"
    ]
   },
   {
@@ -379,6 +380,21 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "According to the sk-learn documentation, a weighted F1 score calculates metrics for each label, and finds their average weighted by support (the number of true instances for each label). **This alters ‘macro’ to account for label imbalance;** it can result in an F-score that is not between precision and recall.\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
